@@ -7,6 +7,13 @@ Date - user
 	BUGFIX:   	explanation of bug solved
 	CHANGES:  	explanation of codification changes
 
+2010/07/07 - jgonzale
+	BUGFIX:		Solved a *big* issue regarding to the use of communicators
+				when simulating collective operations. The 'global OP' records
+				generated by 'prv2trf' didn't express the actual root of an
+				collective operation, just which thread is the root. Right
+				now, this is taken into account in the simulation engine.
+
 2010/05/11 - jgonzale
 	CHANGES:	Cluster blocks are now translated coherently when generating
 				Paraver trace
